--- a/examples/graph/designer/plot.ui
+++ b/examples/graph/designer/plot.ui
@@ -14,52 +14,124 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QHBoxLayout" name="horizontalLayout_2">
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
     <item>
-     <layout class="QVBoxLayout" name="verticalLayout" stretch="3,2">
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="spacing">
+       <number>0</number>
+      </property>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout" stretch="3,2">
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <property name="spacing">
+         <number>0</number>
+        </property>
         <item>
-         <widget class="ExPlotWidget" name="widget_2">
+         <widget class="StaticPlotWidget" name="static_plot">
           <property name="toolTip">
-           <string>Extended PlotWidget Plugin</string>
+           <string>Extended Plot Widget with live data plotting capabilities.</string>
           </property>
-          <property name="xRangeCycleSize" stdset="0">
-           <double>5.000000000000000</double>
+          <property name="plotTitle" stdset="0">
+           <string>Static Plot</string>
           </property>
-          <property name="scrollingPlotFixedXRange" stdset="0">
+          <property name="showGridX" stdset="0">
            <bool>true</bool>
           </property>
-          <property name="scrollingPlotFixedXRangeOffset" stdset="0">
-           <double>0.000000000000000</double>
+          <property name="showGridY" stdset="0">
+           <bool>true</bool>
+          </property>
+          <property name="showTopAxis" stdset="0">
+           <bool>true</bool>
+          </property>
+          <property name="showRightAxis" stdset="0">
+           <bool>false</bool>
+          </property>
+          <property name="additionalLayers" stdset="0">
+           <number>1</number>
+          </property>
+          <property name="axisLabels" stdset="0">
+           <string>{&quot;bottom&quot;: &quot;x-axis&quot;, &quot;left&quot;: &quot;y-axis I&quot;, &quot;layer_0&quot;: &quot;y-axis II&quot;}</string>
+          </property>
+          <property name="axisRanges" stdset="0">
+           <string>{&quot;y&quot;: [-3, 1], &quot;layer_0&quot;: [-1, 3]}</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="ExPlotWidget" name="widget_3">
+         <widget class="SlidingPlotWidget" name="sliding_plot">
           <property name="toolTip">
-           <string>Extended PlotWidget Plugin</string>
+           <string>Extended Plot Widget with live data plotting capabilities.</string>
           </property>
-          <property name="plottingStyle" stdset="0">
-           <enum>ExPlotWidget::STATIC_PLOT</enum>
+          <property name="plotTitle" stdset="0">
+           <string>Sliding Plot</string>
+          </property>
+          <property name="showTimeProgressLine" stdset="0">
+           <bool>true</bool>
+          </property>
+          <property name="time_span" stdset="0">
+           <double>10.000000000000000</double>
+          </property>
+          <property name="showGridX" stdset="0">
+           <bool>false</bool>
+          </property>
+          <property name="showGridY" stdset="0">
+           <bool>true</bool>
+          </property>
+          <property name="axisRanges" stdset="0">
+           <string>{&quot;y&quot;: [0, 10]}</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
-       <widget class="ExPlotWidget" name="widget_1">
+       <widget class="ScrollingPlotWidget" name="scrolling_plot">
         <property name="toolTip">
-         <string>Extended PlotWidget Plugin</string>
+         <string>Extended Plot Widget with live data plotting capabilities.</string>
         </property>
-        <property name="plottingStyle" stdset="0">
-         <enum>ExPlotWidget::SLIDING_POINTER</enum>
+        <property name="plotTitle" stdset="0">
+         <string>Scrolling Plot</string>
         </property>
         <property name="showTimeProgressLine" stdset="0">
          <bool>true</bool>
         </property>
-        <property name="xRangeCycleSize" stdset="0">
-         <double>10.000000000000000</double>
+        <property name="time_span" stdset="0">
+         <double>20.000000000000000</double>
+        </property>
+        <property name="showGridX" stdset="0">
+         <bool>false</bool>
+        </property>
+        <property name="showGridY" stdset="0">
+         <bool>false</bool>
+        </property>
+        <property name="showTopAxis" stdset="0">
+         <bool>true</bool>
+        </property>
+        <property name="additionalLayers" stdset="0">
+         <number>1</number>
+        </property>
+        <property name="axisRanges" stdset="0">
+         <string>{&quot;y&quot;: [0, 20], &quot;layer_0&quot;: [-10, 10]}</string>
+        </property>
+        <property name="fixedXRange" stdset="0">
+         <bool>true</bool>
+        </property>
+        <property name="fixedXRangeOffset" stdset="0">
+         <double>0.200000000000000</double>
         </property>
        </widget>
       </item>
@@ -70,7 +142,17 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ExPlotWidget</class>
+   <class>ScrollingPlotWidget</class>
+   <extends>QGraphicsView</extends>
+   <header>accsoft_gui_pyqt_widgets.graph.widgets.plotwidget</header>
+  </customwidget>
+  <customwidget>
+   <class>SlidingPlotWidget</class>
+   <extends>QGraphicsView</extends>
+   <header>accsoft_gui_pyqt_widgets.graph.widgets.plotwidget</header>
+  </customwidget>
+  <customwidget>
+   <class>StaticPlotWidget</class>
    <extends>QGraphicsView</extends>
    <header>accsoft_gui_pyqt_widgets.graph.widgets.plotwidget</header>
   </customwidget>
