Changed usePartialSet to sendOnlyUpdatedValues

--- a/examples/property_edit/app.ui
+++ b/examples/property_edit/app.ui
@@ -31,6 +31,9 @@
         <property name="decoration" stdset="0">
          <enum>PropertyEdit::GroupBox</enum>
         </property>
+        <property name="sendOnlyUpdatedValues" stdset="0">
+         <bool>false</bool>
+        </property>
         <property name="fields" stdset="0">
          <string>[{&quot;field&quot;: &quot;amplitude&quot;, &quot;type&quot;: 2, &quot;rw&quot;: true, &quot;label&quot;: &quot;Amplitude (mA)&quot;}, {&quot;field&quot;: &quot;frequency&quot;, &quot;type&quot;: 1, &quot;rw&quot;: true, &quot;label&quot;: &quot;Frequency (Hz)&quot;}, {&quot;field&quot;: &quot;enabled&quot;, &quot;type&quot;: 3, &quot;rw&quot;: true, &quot;label&quot;: &quot;Enabled&quot;}, {&quot;field&quot;: &quot;particles&quot;, &quot;type&quot;: 5, &quot;rw&quot;: true, &quot;label&quot;: &quot;Particle Type&quot;, &quot;ud&quot;: {&quot;options&quot;: [[&quot;Protons&quot;, 1], [&quot;Ions&quot;, 2], [&quot;Electrons&quot;, 4]]}}]</string>
         </property>
