--- a/examples/property_edit/designer_example.ui
+++ b/examples/property_edit/designer_example.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>PropertyEdit Qt Designer example</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_2">
