--- a/accwidgets/parameter_selector/selector.ui
+++ b/accwidgets/parameter_selector/selector.ui
@@ -136,7 +136,7 @@
          </property>
          <layout class="QGridLayout" name="gridLayout">
           <item row="0" column="2">
-           <widget class="QLabel" name="label_3">
+           <widget class="QLabel" name="field_title">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
               <horstretch>0</horstretch>
