--- a/accwidgets/property_edit/designer/field_editor.ui
+++ b/accwidgets/property_edit/designer/field_editor.ui
@@ -18,6 +18,9 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="add_btn">
+       <property name="toolTip">
+        <string>Add field entry</string>
+       </property>
        <property name="text">
         <string/>
        </property>
@@ -29,6 +32,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="remove_btn">
+       <property name="toolTip">
+        <string>Remove field entry</string>
+       </property>
        <property name="text">
         <string/>
        </property>
