Make graceful fallback when parameter_selector accwidgets module is not available

--- a/accwidgets/property_edit/designer/field_editor.ui
+++ b/accwidgets/property_edit/designer/field_editor.ui
@@ -91,30 +91,51 @@
           </widget>
          </item>
          <item>
-          <spacer name="horizontalSpacer_2">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeType">
-            <enum>QSizePolicy::Fixed</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>10</width>
-             <height>0</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <widget class="QPushButton" name="ccdb_btn">
-           <property name="toolTip">
-            <string>Auto-populate from CCDB</string>
-           </property>
-           <property name="icon">
-            <iconset>
-             <normaloff>icons/database.ico</normaloff>icons/database.ico</iconset>
-           </property>
+          <widget class="QWidget" name="ccdb_view" native="true">
+           <layout class="QVBoxLayout" name="verticalLayout_3">
+            <property name="spacing">
+             <number>0</number>
+            </property>
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <spacer name="spacer">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeType">
+               <enum>QSizePolicy::Fixed</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>10</width>
+                <height>0</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QPushButton" name="ccdb_btn">
+              <property name="toolTip">
+               <string>Auto-populate from CCDB</string>
+              </property>
+              <property name="icon">
+               <iconset>
+                <normaloff>icons/database.ico</normaloff>icons/database.ico</iconset>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </widget>
          </item>
         </layout>
